--- a/package.json
+++ b/package.json
@@ -3,8 +3,16 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@alan-ai/alan-sdk-web": "^1.8.30",
+    "@material-ui/core": "^4.12.3",
+    "@types/react": "^16.8.6 || ^17.0.0",
+    "axios": "^0.26.1",
+    "classnames": "^2.3.1",
+    "emailjs-com": "^3.2.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-spinners": "^0.11.0",
+    "words-to-numbers": "^1.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
